fix new element z-index bug; add on drag layer list item style

--- a/platform/css/index.css
+++ b/platform/css/index.css
@@ -84,7 +84,7 @@ body {
     float: left;
     margin: 1px 0;
     height: 49px;
-    width: 100%;
+    width: 99%;
     background: #fff;
 }
 
